# preditor-model

./: .gitignore  LICENSE  README.md  download-models.sh  pyproject.toml  requirements-dev.txt
eval/: README.md  manual.py
eval/infilling/: README.md  eval.py  gen.py  manual.csv  run.sh  sentences.txt
eval/prediction/: plot.py
eval/substitution/: README.md  eval.py  manual.csv  run.sh
src/prediktor/: caching.py  config.py  model.py  nlp.py  server.py  tags.py
src/prediktor/causal/: infilling.py  model.py  prediction.py
src/prediktor/infilling/: __init__.py  blank.py  end.py  infilling.py
src/prediktor/model/: hf.py
src/prediktor/prediction/: __init__.py  confidence.py  prediction.py  simple.py
src/prediktor/replacement/: __init__.py  caching.py  dijkstra.py  nlp.py  replacement.py  search.py  variants.py
src/prediktor/server/: __init__.py  prediction.py
src/preditor/: __init__.py  caching.py  config.py  language.py  nlp.py  server.py  suggestion.py  tags.py
src/preditor/infilling/: __init__.py  blank.py  config.py  end.py  generation.py  infilling.py  selection.py
src/preditor/model/: __init__.py  hf.py  model.py
src/preditor/prediction/: __init__.py  confidence.py  config.py  prediction.py  simple.py
src/preditor/replacement/: dijkstra.py  replacement.py  search.py
src/preditor/substitution/: __init__.py  config.py  dijkstra.py  search.py  substitution.py  variants.py
src/preditor/suggestion/: __init__.py  generation.py  suggestion.py
test/: test_language.py  test_suggestion.py
test/substitution/: test_substitution.py
