[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
authors = [
    { name = "David Klement" },
]
name = "preditor-model"
version = "0.1"
description = "Service providing text predictions"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["prediction", "infilling", "nlp", "gpt"]
classifiers = [
    "Programming Language :: Python :: 3.8",
]
dependencies = [
    "accelerate",
    "flask",
    "pydantic",
    "python-dotenv",
    "torch",
    "transformers",
    "ufal.morphodita",
]

[tool.mypy]
strict = false

[[tool.mypy.overrides]]
module = [
    "dotenv",
    "torch",
    "transformers",
    "ufal",
]
ignore_missing_imports = true
