[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
authors = [
    { name = "David Klement" },
]
name = "preditor-model"
version = "1.0"
description = "Service providing text predictions and sentence substitutions"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["substitution", "prediction", "infilling", "nlp"]
classifiers = [
    "Programming Language :: Python :: 3.8",
]
dependencies = [
    "accelerate",
    "fasttext",
    "flask",
    "gunicorn",
    "pydantic",
    "python-dotenv",
    "torch",
    "transformers",
    "ufal.morphodita",
]

[tool.mypy]
plugins = "pydantic.mypy"
strict = false

[[tool.mypy.overrides]]
module = [
    "dotenv",
    "fasttext",
    "torch",
    "transformers",
    "ufal",
]
ignore_missing_imports = true
